Better handle interfaces and connections